[gd_scene load_steps=16 format=2]

[ext_resource path="res://mesh/combinator.dae" type="PackedScene" id=1]
[ext_resource path="res://scripts/combinator.gd" type="Script" id=2]
[ext_resource path="res://assets/incubate.png" type="Texture" id=3]
[ext_resource path="res://gray_mat.tres" type="Material" id=4]
[ext_resource path="res://assets/combine.png" type="Texture" id=5]
[ext_resource path="res://combinator_panel.tscn" type="PackedScene" id=6]

[sub_resource type="ConvexPolygonShape" id=1]

points = PoolVector3Array( 1, -1, -0.999512, 1, -1, 1, -1, -1, 0.999512, -0.999512, -1, -1, 1, 1, -0.999512, -0.999512, 1, -1, -1, 1, 0.999512, 0.999512, 1, 1, 1, -1, -0.999512, 1, 1, -0.999512, 0.999512, 1, 1, 1, -1, 1, 1, -1, 1, 0.999512, 1, 1, -1, 1, 0.999512, -1, -1, 0.999512, -1, -1, 0.999512, -1, 1, 0.999512, -0.999512, 1, -1, -0.999512, -1, -1, 1, 1, -0.999512, 1, -1, -0.999512, -0.999512, -1, -1, -0.999512, 1, -1 )

[sub_resource type="SpatialMaterial" id=9]

flags_transparent = false
flags_unshaded = false
flags_on_top = false
flags_use_point_size = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
albedo_color = Color( 0.7, 0.7, 0.7, 1 )
albedo_texture = ExtResource( 3 )
specular_mode = 0
specular_color = Color( 0.1, 0.1, 0.1, 1 )
specular_metalness = 0.1
specular_roughness = 0.0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
height_enabled = false
subsurf_scatter_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector2( 1, 1 )
uv1_offset = Vector2( 0, 0 )
uv2_scale = Vector2( 1, 1 )
uv2_offset = Vector2( 0, 0 )

[sub_resource type="ConvexPolygonShape" id=2]

points = PoolVector3Array( -1, -1, 1.46973, -1, 1, 1.46973, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1, -1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, 1.46973, 1, -1, 1.46973, 1, -1, 1.46973, 1, 1, 1.46973, -1, 1, 1.46973, -1, -1, 1.46973, -1, -1, -1, 1, -1, -1, 1, -1, 1.46973, -1, -1, 1.46973, 1, 1, -1, -1, 1, -1, -1, 1, 1.46973, 1, 1, 1.46973 )

[sub_resource type="SpatialMaterial" id=8]

flags_transparent = false
flags_unshaded = false
flags_on_top = false
flags_use_point_size = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
albedo_color = Color( 0.7, 0.7, 0.7, 1 )
albedo_texture = ExtResource( 5 )
specular_mode = 0
specular_color = Color( 0.1, 0.1, 0.1, 1 )
specular_metalness = 0.1
specular_roughness = 0.0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
height_enabled = false
subsurf_scatter_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector2( 1, 1 )
uv1_offset = Vector2( 0, 0 )
uv2_scale = Vector2( 1, 1 )
uv2_offset = Vector2( 0, 0 )

[sub_resource type="ConvexPolygonShape" id=3]

points = PoolVector3Array( -1, -1, 1.46973, -1, 1, 1.46973, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1, -1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, 1.46973, 1, -1, 1.46973, 1, -1, 1.46973, 1, 1, 1.46973, -1, 1, 1.46973, -1, -1, 1.46973, -1, -1, -1, 1, -1, -1, 1, -1, 1.46973, -1, -1, 1.46973, 1, 1, -1, -1, 1, -1, -1, 1, 1.46973, 1, 1, 1.46973 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]

flags_transparent = false
flags_unshaded = true
flags_on_top = false
flags_use_point_size = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
albedo_color = Color( 0.7, 0.7, 0.7, 1 )
specular_mode = 0
specular_color = Color( 0.1, 0.1, 0.1, 1 )
specular_metalness = 0.1
specular_roughness = 0.0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
height_enabled = false
subsurf_scatter_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector2( 1, 1 )
uv1_offset = Vector2( 0, 0 )
uv2_scale = Vector2( 1, 1 )
uv2_offset = Vector2( 0, 0 )

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cube.1:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.2, 0.5 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.086, 1.15185, -1.42215 ), Vector3( 1.086, 1.01428, -1.42215 ), Vector3( 1.086, 1.15185, -1.42215 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cube.3:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.2, 0.5 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.523316, 1.15185, -1.42215 ), Vector3( 0.523316, 1.05707, -1.42215 ), Vector3( 0.523316, 1.15185, -1.42215 ) ]
}

[node name="Combinator" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Cube"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cube/StaticBody"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Quad2" type="Quad" parent="Cube"]

transform = Transform( -0.142857, 0, -1.2489e-08, 0, 0.333333, 0, 2.18557e-08, 0, -0.25, 0.371067, 1.26665, -0.656484 )
layers = 1
material_override = SubResource( 9 )
cast_shadow = 1
extra_cull_margin = 0.0
visible_in_all_rooms = false
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
axis = 1
size = Vector2( 2.5, 2 )
offset = Vector2( 0, 0 )
centered = true

[node name="Cube.1" parent="."]

transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 1.086, 1.15185, -1.42215 )
material_override = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="Cube.1"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cube.1/StaticBody"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Quad" type="Quad" parent="Cube.1"]

transform = Transform( -0.999999, 0, -8.74228e-08, 0, 0.999999, 0, 8.74227e-08, 0, -1, 0, 1.04071, 0.218363 )
layers = 1
material_override = SubResource( 8 )
cast_shadow = 1
extra_cull_margin = 0.0
visible_in_all_rooms = false
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
axis = 1
size = Vector2( 2.5, 2 )
offset = Vector2( 0, 0 )
centered = true

[node name="Cube.2" parent="."]

material_override = ExtResource( 4 )

[node name="Cube.3" parent="."]

material_override = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="Cube.3"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cube.3/StaticBody"]

shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="Cylinder.1" parent="."]

material_override = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="."]

size = Vector2( 400, 400 )
own_world = true
world = null
transparent_bg = false
msaa = 1
hdr = false
disable_3d = false
render_target_v_flip = true
render_target_clear_on_new_frame = true
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="CombinatorPanel" parent="Viewport" instance=ExtResource( 6 )]

[node name="Area" type="Area" parent="."]

transform = Transform( 1.05, 0, 0, 0, 1, 0, 0, 0, 1.05, 0.0714184, 0.38471, 0.670982 )
input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layers = 1
collision_mask = 1

[node name="Quad" type="Quad" parent="Area"]

transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.99, 0 )
layers = 1
material_override = SubResource( 5 )
cast_shadow = 1
extra_cull_margin = 0.0
visible_in_all_rooms = false
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
axis = 1
size = Vector2( 2, 2 )
offset = Vector2( 0, 0 )
centered = true

[node name="CollisionShape" type="CollisionShape" parent="Area"]

shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="spawn" type="Position3D" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.809103, 1.6303, -1.32872 )

[node name="point" type="Camera" parent="."]

transform = Transform( -2.45426e-08, -0.90859, 0.417688, -2.27357e-08, 0.417688, 0.90859, -1, 1.28028e-08, -3.09086e-08, 1.23998, 3.03074, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="bulb" type="OmniLight" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.818578, 2.10295, -1.66632 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 5.0
light_negative = false
light_specular = 0.1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_max_distance = 0.0
editor_only = false
omni_range = 5.0
omni_attenuation = 1.0
omni_shadow_mode = 0
omni_shadow_detail = 1

[node name="animation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/click = SubResource( 6 )
anims/incubate = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="input_event" from="Cube/StaticBody" to="." method="_on_body_input_event"]

[connection signal="input_event" from="Cube.1/StaticBody" to="." method="_on_panel_input_event"]

[connection signal="input_event" from="Cube.3/StaticBody" to="." method="_on_incubate_input_event"]

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]


